<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.EditActivity">

    <ImageView
        android:contentDescription="@string/back_button"
        android:id="@+id/back_button"
        android:layout_width="@dimen/icon_width"
        android:layout_height="@dimen/icon_width"
        android:layout_marginTop="@dimen/edge_margin"
        android:layout_marginStart="@dimen/edge_margin"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:contentDescription="@string/pin_button"
        android:id="@+id/pin_button"
        android:layout_width="@dimen/icon_width"
        android:layout_height="@dimen/icon_width"
        android:layout_marginTop="@dimen/edge_margin"
        android:layout_marginEnd="@dimen/edge_margin"
        android:src="@drawable/ic_pin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    
    <EditText
        android:autofillHints="@null"
        android:background="@null"
        android:id="@+id/todo_name"
        android:inputType="text"
        android:hint="@string/todo_name_def"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_height"
        android:layout_marginTop="@dimen/list_vertical_margin"
        android:layout_marginStart="@dimen/edge_margin"
        android:layout_marginEnd="@dimen/edge_margin"
        android:textSize="@dimen/search_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        />
    
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/list_vertical_margin"
        android:layout_marginStart="@dimen/edge_margin"
        android:layout_marginEnd="@dimen/edge_margin"
        android:layout_marginBottom="@dimen/edge_margin"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todo_name"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical"
            android:gravity="top">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/unchecked_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_vertical_margin"
                android:layout_marginBottom="@dimen/list_vertical_margin"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                />

            <include
                android:id="@+id/new_item_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_vertical_margin"
                layout="@layout/add_item_button"
                />
            
            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:visibility="gone"
                app:dividerColor="@color/grey"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/checked_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>